--- a/passive-income/passive-income-app-service/src/main/resources/application.yml
+++ b/passive-income/passive-income-app-service/src/main/resources/application.yml
@@ -1,24 +1,16 @@
 spring:
   application:
-    name: hello-kotlin
-
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
+    name: passive-income-app-service
+  profiles:
+    active: local
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     open-in-view: false
     show-sql: true
     properties:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 1000
-
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
 
