--- a/passive-income/app-api/src/main/resources/application.yml
+++ b/passive-income/app-api/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
         format_sql: true
         default_batch_fetch_size: 1000
 
+  data:
+    redis:
+      repositories:
+        enabled: false
+
 logging:
   level:
     root: info
