google oauth ㄱㄱ

--- a/passive-income/app-api/src/main/resources/application.yml
+++ b/passive-income/app-api/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: passive-income-app-service
   profiles:
-    active: local
+    active: local, oauth
 
   jpa:
     hibernate:
