--- a/passive-income/app-api/src/main/resources/application.yml
+++ b/passive-income/app-api/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: passive-income-app-service
   profiles:
-    active: local, oauth
+    active: local
 
   jpa:
     hibernate:
@@ -25,4 +25,10 @@ logging:
 
 app:
   security:
-    filter-chain: oauth
+    filter-chain: oauth2
+    oauth2:
+      provider:
+        google:
+          client-id: ${GOOGLE_CLIENT_ID}
+          client-secret: ${GOOGLE_CLIENT_SECRET}
+
