spring-security-oauth2 안 쓰고, 직접 구현. - 클라이언트에서 redirect할 OAuth2 URL 조회 - 클라이언트가 OAuth2 Authorization 서버에서 인증 코드 받으면 backend로 전달해서 인증 마무리 처리

--- a/passive-income/app-api/src/main/resources/application.yml
+++ b/passive-income/app-api/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: passive-income-app-service
   profiles:
-    active: local
+    active: local, oauth2
 
   jpa:
     hibernate:
@@ -26,9 +26,17 @@ logging:
 app:
   security:
     filter-chain: oauth2
+    jwt:
+      access-token:
+        secret: ${JWT_ACCESS_TOKEN_SECRET}
+        expiration: PT24H
     oauth2:
       provider:
         google:
           client-id: ${GOOGLE_CLIENT_ID}
           client-secret: ${GOOGLE_CLIENT_SECRET}
+          redirect-uri: http://localhost:3000/oauth2/code/google
+          scope:
+            - email
+            - profile
 
