--- a/passive-income/app-api/src/main/resources/application-local.yml
+++ b/passive-income/app-api/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:tcp://localhost/~/Dev/h2/databases/passive-income-test;MODE=PostgreSQL
     username: sa
 
   jpa:
@@ -16,3 +16,7 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+app:
+  security:
+    create-test-user: true
