--- a/passive-income/app-kis/src/main/resources/application.yml
+++ b/passive-income/app-kis/src/main/resources/application.yml
@@ -30,3 +30,4 @@ kis:
   url: https://openapi.koreainvestment.com:9443
   app-key: ${KIS_APP_KEY}
   app-secret: ${KIS_APP_SECRET}
+  ws-url: ws://ops.koreainvestment.com:21000
