--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -35,10 +35,11 @@ services:
       - zookeeper
 
   redis:
-    image: redis:7.4.1
+    image: redis/redis-stack:7.2.0-v15
     container_name: passive-income-redis
     ports:
       - "6379:6379"
+      - "8001:8001"
     volumes:
       - ./redis-data:/data
     environment:
